Multi-representation Indexing

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,29 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 1,
    "id": "07224099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/pytorch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+      "/opt/anaconda3/envs/pytorch/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3699: LangChainDeprecationWarning: As of langchain-core 0.3.0, LangChain uses pydantic v2 internally. The langchain_core.pydantic_v1 module was a compatibility shim for pydantic v1, and should no longer be used. Please update the code to import from Pydantic directly.\n",
+      "\n",
+      "For example, replace imports like: `from langchain_core.pydantic_v1 import BaseModel`\n",
+      "with: `from pydantic import BaseModel`\n",
+      "or the v1 compatibility namespace if you are working in a code base that has not been fully upgraded to pydantic 2 yet. \tfrom pydantic.v1 import BaseModel\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import bs4\n",
     "import numpy as np\n",
+    "import tiktoken\n",
+    "import uuid\n",
     "from typing import Literal\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from operator import itemgetter\n",
     "from dotenv import load_dotenv\n",
+    "from langchain.retrievers.multi_vector import MultiVectorRetriever\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
     "from langchain_core.runnables import RunnablePassthrough,RunnableLambda\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.documents import Document\n",
     "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate, PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
-    "import tiktoken\n",
     "from langchain.utils.math import cosine_similarity\n",
     "from langchain.load import loads, dumps\n",
-    "from operator import itemgetter\n",
-    "\n",
+    "from langchain.storage import InMemoryByteStore\n",
     "\n",
     "load_dotenv()\n",
     "langchain_api = os.getenv('LANGCHAIN_API_KEY')\n",
@@ -34,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "id": "65029e8a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "id": "f53f226c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "id": "f71841bc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "id": "b736680c",
    "metadata": {},
    "outputs": [
@@ -78,7 +98,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['ids', 'embeddings', 'documents', 'uris', 'included', 'data', 'metadatas'])\n",
-      "ID: 910181a3-dee0-44c8-af8f-d3b934ecc9bb\n",
+      "ID: 62c83c79-d890-4c6a-9b6a-c12c1b825027\n",
       "Text: LLM Powered Autonomous Agents\n",
       "    \n",
       "Date: June 23, 2023  |  Estimated Reading Time: 31 min  |  Author: Lilian Weng\n",
@@ -87,25 +107,25 @@
       "Building agents with LLM (large language model) as its core controller is a cool con\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: dc146721-f5f7-418e-82d7-83f8601ea8ff\n",
+      "ID: 3c354a7a-c87b-4f22-ba5c-4dba87f004ca\n",
       "Text: Memory\n",
       "\n",
       "Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\n",
       "Long-term memory: This provides the agent with th\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: b767d5e0-ca36-42b0-9fe5-535ba6928c0e\n",
+      "ID: 5d29c4bf-6866-4a16-8b5c-e3ee7f87920f\n",
       "Text: Component One: Planning#\n",
       "A complicated task usually involves many steps. An agent needs to know what they are and plan ahead.\n",
       "Task Decomposition#\n",
       "Chain of thought (CoT; Wei et al. 2022) has become a s\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: 3ca9502c-2cbc-4d1b-894f-b8bbc8059499\n",
+      "ID: aabce8a6-4c0c-47aa-a114-49e416fc887d\n",
       "Text: Task decomposition can be done (1) by LLM with simple prompting like \"Steps for XYZ.\\n1.\", \"What are the subgoals for achieving XYZ?\", (2) by using task-specific instructions; e.g. \"Write a story outl\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
       "==================================================\n",
-      "ID: 8adf90ce-36f7-41a2-a2a8-5bf9d166bdda\n",
+      "ID: 55189630-6f78-4e6e-abbe-a6c294f7bcfe\n",
       "Text: Self-Reflection#\n",
       "Self-reflection is a vital aspect that allows autonomous agents to improve iteratively by refining past action decisions and correcting previous mistakes. It plays a crucial role in r\n",
       "Meta: {'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/'}\n",
@@ -126,37 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "d96de6a5",
+   "execution_count": 6,
+   "id": "1c586aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "189"
+       "'Task decomposition in a LLM-powered autonomous agent system involves breaking down complex tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle intricate tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods such as prompting the LLM with specific instructions, using task-specific instructions, or incorporating human inputs. Additionally, external classical planners can be utilized for long-horizon planning in some approaches, where the LLM translates the problem into a planning domain language, requests a classical planner to generate a plan, and then translates the plan back into natural language. This outsourcing of the planning step to an external tool is common in certain robotic setups.'"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vectorstore._collection.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "6e4d1167",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input_variables=['context', 'question'] input_types={} partial_variables={} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template='Use the context to answer the question.\\n\\nContext:\\n{context}\\n\\nQuestion: {question}'), additional_kwargs={})]\n"
-     ]
     }
    ],
    "source": [
@@ -164,27 +166,7 @@
     "prompt = ChatPromptTemplate.from_template(\n",
     "    \"Use the context to answer the question.\\n\\nContext:\\n{context}\\n\\nQuestion: {question}\"\n",
     ")\n",
-    "print(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "1c586aa6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Task decomposition is a technique used to break down complex tasks into smaller and simpler steps, making them more manageable. This process can be done through prompting techniques like Chain of Thought (CoT) or Tree of Thoughts, task-specific instructions, or with the help of external classical planners like in the LLM+P approach.'"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "\n",
     "llm = ChatOpenAI(model_name = 'gpt-3.5-turbo',temperature=0)\n",
     "def format_docs(docs):\n",
     "    return '\\n\\n'.join(doc.page_content for doc in docs)\n",
@@ -197,96 +179,22 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"What is Task Decomposition?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "id": "e75c9966",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rag_chain.invoke(\"What is Task Decomposition?\")\n",
+    "\n",
     "question = \"Do you think Amir is going to become very rich by the age 40 years old?\"\n",
-    "document = 'Amir will is going to gain networth of 200 million by the time he is 40 years ols. His income will get to at least 1 million per month.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "4b7a5a84",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "document = 'Amir will is going to gain networth of 200 million by the time he is 40 years ols. His income will get to at least 1 million per month.'\n",
+    "\n",
     "encoding = tiktoken.get_encoding(\"cl100k_base\")\n",
-    "len(encoding.encode(question))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "fe3f3dcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embd = OpenAIEmbeddings()\n",
-    "query_result = embd.embed_query(question) \n",
-    "document_result = embd.embed_documents([document])[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "id": "09b17c7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
     "def cosine(vec1,vec2):\n",
     "    dot_product = np.dot(vec1,vec2)\n",
     "    norm_vec1 = np.linalg.norm(vec1)\n",
     "    norm_vec2 = np.linalg.norm(vec2)\n",
-    "    return dot_product / (norm_vec1 * norm_vec2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "id": "63e59883",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.9074268061127665)"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cosine(query_result,document_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "id": "7d507ce6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return dot_product / (norm_vec1 * norm_vec2)\n",
+    "\n",
+    "\n",
+    "\n",
     "prompt = \"\"\" Answer the question based on the following contex:\n",
     "{context}\n",
     "\n",
@@ -294,57 +202,13 @@
     "\n",
     "\"\"\"\n",
     "prompt = ChatPromptTemplate.from_template(prompt)\n",
-    "llm = ChatOpenAI(model='gpt-3.5-turbo', temperature=0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "20e1d8f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Task decomposition in a LLM-powered autonomous agent system involves breaking down large tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle complex tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods, such as using simple prompting for LLM, task-specific instructions, or human inputs. By breaking down tasks into smaller components, the agent can effectively plan and execute its actions to achieve the overall goal.'"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain = prompt | llm | StrOutputParser()\n",
-    "chain.invoke({'context':docs, 'question':'What is Task Decomposition'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "id": "65b27a9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Task decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps. This process involves transforming big tasks into multiple manageable tasks, allowing the agent to plan ahead and interpret the model's thinking process. Techniques such as Chain of Thought (CoT) and Tree of Thoughts extend task decomposition by exploring multiple reasoning possibilities at each step and generating multiple thoughts per step, creating a tree structure.\""
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rag_chain = (\n",
-    "    {'context': retriever, 'question': RunnablePassthrough()}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    "    | StrOutputParser()\n",
-    ")\n",
+    "llm = ChatOpenAI(model='gpt-3.5-turbo', temperature=0)\n",
     "\n",
-    "rag_chain.invoke('What is Task Decomposition')"
+    "embd = OpenAIEmbeddings()\n",
+    "query_result = embd.embed_query(question) \n",
+    "document_result = embd.embed_documents([document])[0]\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "chain.invoke({'context':docs, 'question':'What is Task Decomposition'})\n"
    ]
   },
   {
@@ -948,10 +812,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "id": "4fb061cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using PHYSICS\n",
+      "A black hole is a region in space where gravity is so strong that nothing, not even light, can escape from it. This happens when a star collapses under its own gravity, creating a point of infinite density called a singularity. The boundary of a black hole is called the event horizon, and once something crosses this boundary, it can never escape the black hole's gravitational pull.\n"
+     ]
+    }
+   ],
    "source": [
     "physics_template = \"\"\"You are a very smart physics professor. \\\n",
     "You are great at answering questions about physics in a concise and easy to understand manner. \\\n",
@@ -992,9 +865,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b15f820",
+   "metadata": {},
+   "source": [
+    "#### Multi-representation Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fde1c244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = WebBaseLoader(\"https://lilianweng.github.io/posts/2023-06-23-agent/\")\n",
+    "docs = loader.load()\n",
+    "\n",
+    "loader = WebBaseLoader(\"https://lilianweng.github.io/posts/2024-02-05-human-data-quality/\")\n",
+    "docs.extend(loader.load())\n",
+    "\n",
+    "chain = (\n",
+    "    {\"doc\": lambda x : x.page_content}\n",
+    "    |PromptTemplate.from_template(\"Summarize the following document:\\n\\n{doc}\")\n",
+    "    |llm\n",
+    "    |StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "summaries = chain.batch(docs,{'max_concurrency':5})\n",
+    "\n",
+    "vectorstore = Chroma(collection_name='summaries',\n",
+    "                     embedding_function=OpenAIEmbeddings())\n",
+    "store = InMemoryByteStore()\n",
+    "id_key = 'doc_id'\n",
+    "\n",
+    "retriever = MultiVectorRetriever(\n",
+    "    vectorstore=vectorstore,\n",
+    "    byte_store=store,\n",
+    "    id_key=id_key,   \n",
+    ")\n",
+    "\n",
+    "doc_ids = [str(uuid.uuid4()) for _ in docs]\n",
+    "summary_docs = [\n",
+    "    Document(page_content=d, metadata={id_key: doc_ids[i]}) \n",
+    "    for i,d in enumerate(summaries)\n",
+    "]\n",
+    "\n",
+    "retriever.vectorstore.add_documents(summary_docs)\n",
+    "retriever.docstore.mset(list(zip(doc_ids, docs)))\n",
+    "\n",
+    "# Testing\n",
+    "query = \"Memory in agents\"\n",
+    "sub_docs = vectorstore.similarity_search(query,k=1)\n",
+    "retrieved_docs = retriever.get_relevant_documents(query,n_results=1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde1c244",
+   "id": "66b91051",
    "metadata": {},
    "outputs": [],
    "source": []
